--- a/about/skills.css
+++ b/about/skills.css
@@ -55,7 +55,7 @@
 
 .skill-application {
     font-size: 14px;
-    color: #665e54;
+    color: #3d3933;
     line-height: 1.5;
     padding-left: 5px;
 }
