--- a/about/responsive.css
+++ b/about/responsive.css
@@ -1,5 +1,5 @@
 /* Responsive Layout */
-@media screen and (max-width: 1385px) {
+@media screen and (max-width: 1440px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -45,6 +45,73 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    header {
+        margin-bottom: 0;
+    }
+
+    #name {
+        font-size: 40px;
+        margin-left: 0;
+    }
+
+    #links {
+        width: 90%;
+        margin: 0 auto 20px auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-gap: 5px;
+        border-radius: 15px;
+        font-size: 18px;
+    }
+
+    .link:hover {
+        border-radius: 10px;
+    }
+
+    .link {
+        display: flex;
+        justify-content: center;
+        padding: 8px 5px;
+        border-radius: 15px;
+    }
+
+    .bento-container {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "image-slider"
+            "who-i-am"
+            "experience"
+            "skills"
+            "quotes";
+        max-width: 95%;        
+        padding: 10px;
+    }
+
+    .image-slider {
+        min-height: 450px;        
+    }   
+
+    .img2{
+        position:absolute;
+        top: 10%;
+        transform: translateY(-10%);
+    }    
+
+    .section-title {
+        font-size: 30px;
+    }
+    
+    .skills-container {
+        flex-direction: column;
+    }
+    
+    .skill-category {
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .bento-container {
         grid-template-columns: 1fr 1fr;
@@ -78,21 +145,23 @@
     }
 
     #name {
-        font-size: 36px;
+        font-size: 38px;
         margin-left: 0;
     }
 
     #links {
-        position: static;
-        transform: none;
-        margin: 15px auto;
-        font-size: 20px;
+        width: 90%;
+        margin: 0 auto 20px auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        width: 90%;
+        text-align: center;
         grid-gap: 5px;
         border-radius: 15px;
-        text-align: center;
+        font-size: 20px;
+    }
+
+    .link:hover {
+        border-radius: 10px;
     }
 
     .link {
@@ -115,7 +184,13 @@
     }
 
     .image-slider {
-        min-height: 350px;
+        min-height: 450px;
+    }      
+
+    .img1 {
+        position: absolute;
+        top: 5%;
+        transform: translateY(-5%);
     }
 
     .section-title {
@@ -133,12 +208,12 @@
 
 @media screen and (max-width: 576px) {
     #name {
-        font-size: 32px;
+        font-size: 36px;        
     }
     
     .link {
-        padding: 6px 15px;
-        font-size: 18px;
+        padding: 10.5px 15px;
+        font-size: 20px;
     }
     
     .bento-item {
