--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,7 +18,7 @@
 /* Responsive Styles */
 
 /* Desktop to Tablet Transition (max-width: 1385px) */
-@media (max-width: 1385px) {
+@media (max-width: 1440px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -101,6 +101,36 @@
         width: 100%;
     }
 }
+
+/* Medium-Small Screens (max-width: 1024px) */
+@media (max-width: 1024px) {
+    .bento-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .latest-post {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .featured-posts {
+        grid-column: 1 / 3; /* Span both columns */
+        grid-row: 4 / 5;
+    }
+
+    .projects-showcase {
+        grid-column: 1 / 3; /* Span both columns */
+        grid-row: 5 / 6;
+    }
+
+    .get-in-touch {
+        grid-column: 1 / 4;
+        grid-row: 3 / 4;
+        min-height: 400px;
+        height: auto;
+    }    
+}
+
 
 /* Additional improvements for Get in Touch on tablets */
 @media (max-width: 1200px) and (min-width: 769px) {
